@@ -450,6 +450,7 @@ class ContentModelArticle extends JModelAdmin
 			list($title, $alias) = $this->generateNewTitle($data['catid'], $data['alias'], $data['title']);
 			$data['title']	= $title;
 			$data['alias']	= $alias;
+			$data['state']	= 0;
 		}
 
 		if (parent::save($data)) {
