@@ -1208,9 +1208,10 @@ class MenusModelItem extends JModelAdmin
 		// Alter the title & alias for save as copy.  Also, unset the home record.
 		if (!$isNew && $data['id'] == 0){
 			list($title, $alias) = $this->generateNewTitle($table->parent_id, $table->alias, $table->title);
-			$table->title	= $title;
-			$table->alias	= $alias;
-			$table->home	= 0;
+			$table->title		= $title;
+			$table->alias		= $alias;
+			$table->published	= 0;
+			$table->home		= 0;
 		}
 
 		// Check the data.
